Add Emoji entity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,9 @@ endif()
 
 find_package(Qt5 REQUIRED COMPONENTS Widgets Test)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
+include_directories(include)
+add_executable(${PROJECT_NAME}
+    src/emoji.cpp
+    src/main.cpp
+)
 qt5_use_modules(${PROJECT_NAME} Widgets)
