--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(Qt5 REQUIRED COMPONENTS Widgets Test)
 include_directories(include)
 add_executable(${PROJECT_NAME}
     src/emoji.cpp
+    src/emojikeyboard.cpp
     src/main.cpp
 )
 qt5_use_modules(${PROJECT_NAME} Widgets)
