Use full emoji list as a reference

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,12 @@ include_directories(include)
 add_executable(${PROJECT_NAME}
     src/emoji.cpp
     src/emojikeyboard.cpp
+    src/emojireader.cpp
     src/main.cpp
 )
 qt5_use_modules(${PROJECT_NAME} Widgets)
+
+file(DOWNLOAD https://unicode.org/Public/emoji/13.0/emoji-test.txt ${CMAKE_SOURCE_DIR}/emoji-test.txt)
 
 set(CMAKE_CXX_STANDARD 17)
 if (MSVC)
