--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,8 @@ file(DOWNLOAD https://unicode.org/Public/emoji/13.0/emoji-test.txt ${CMAKE_SOURC
 
 set(CMAKE_CXX_STANDARD 17)
 if (MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /WX /O2")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /WX /wd4127 /O2")
+    # disabled warning C4127: conditional expression is constant
 else(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wextra -Werror -pedantic -Wconversion")
 endif(MSVC)
