--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,6 +55,32 @@ jobs:
         cd build
         cmake ..
         cmake --build .
+  windows-mingw-build:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        qt_version: ['5.14.1']
+    steps:
+    - uses: actions/checkout@v1
+    - name: Install MSYS2
+      uses: msys2/setup-msys2@v2
+    - name: Install gcc
+      shell: msys2 {0}
+      run: pacman -S --noconfirm mingw-w64-x86_64-gcc
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: ${{ matrix.qt_version }}
+        arch: win64_mingw73
+    - name: Build application
+      run: |
+        mkdir build
+        cd build
+        cmake .. -G"MSYS Makefiles"
+        cmake --build . -- -j
+      env:
+        CC: gcc
+        CXX: g++
   macOS-gcc-build:
     runs-on: macOS-latest
     steps:
